made benchmarking work

--- a/benchmark_results/results.html
+++ b/benchmark_results/results.html
@@ -1,1 +1,6 @@
 <html><body>
+<image src="fused_attention-official_docs-fwd-causal=True.png"/>
+<image src="fused_attention-official_docs-fwd-causal=False.png"/>
+<image src="fused_attention-official_docs-bwd-causal=True.png"/>
+<image src="fused_attention-official_docs-bwd-causal=False.png"/>
+</body></html>
